I add basename to make the the browser understand the home page and show the browser content

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://salehHadi.github.io/twitter-colon-",
+  "homepage": "https://salehHadi.github.io/twitter-colon",
   "name": "my-ap",
   "version": "0.1.0",
   "private": true,
